test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/invalid_parse/extra_credit/extern_label.plx
# The extern specifier cannot be applied to labels

pub fn main(none) i32 {
    extrn label a
    return 1
}
